--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,20 @@
+click==7.1.2
+dnspython==2.0.0
+email-validator==1.1.1
 Faker==0.7.11
 Flask==1.0
+Flask-Login==0.5.0
 Flask-SQLAlchemy==2.2
 Flask-WTF==0.14.2
-gunicorn
-Werkzeug==0.16
-email_validator
+gunicorn==20.0.4
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+pkg-resources==0.0.0
+PyMySQL==0.10.1
+python-dateutil==2.8.1
+six==1.15.0
+SQLAlchemy==1.3.20
+Werkzeug==0.16.0
+WTForms==2.3.3
